**
**      Official Website : http://mangadmin.all-mag.de
**    GoogleCode Website : http://code.google.com/p/mangadmin/
** Subversion Repository : http://mangadmin.googlecode.com/svn/
**
**    Please report bugs :  http://code.google.com/p/mangadmin/issues/list
**
************************************************************************************************************/

=CHANGELOG=

Rev. 21:
  - corrected the scrollbar when showing the search results
  - implemented the ticket-system (answering is not yet working, comes next time when I have more),
    improvements will follow, the ticket-system needs lots of testing!
    - please report bugs here!: http://code.google.com/p/mangadmin/issues/list
  - fixed some bugs all around

Rev. 20:
  - updated the libraries
  - applied patch by Infamousblob (great! you did a very good work)
  - removed the "by Josh" from the logo, because also other people contribute to MangAdmin
  - moved the grid-navigator to the teleport section and added an editbox for the distance
  - did some code optimization and clean-up
  - notice: I have only very little time :-/
  
Rev. 19:
  - quick-fixed gm-switching, thanks to 99.rogers
  - notice: I am taking a break :-/, but I'll definately continue in some time!
  - please report any bugs here: http://code.google.com/p/mangadmin/issues/list

Rev. 18:
  - when right-clicking on a spell from the spell-search-results list, you/your target now unlearn/s the spell
    on normal-click you/your target learn/s the spell (like before)
  - fixed:
    - add focus to the editbox when entering with the cursor
    - remove focus from editboxes when leaving the box with the cursor, attention, 
      this is a bit confusing, but it's a better way than before ;)
    - removed autofocussing the editboxes
  - added X(Close)-buttons in the right-bottom and removed the task from the TODO
  - added a grid-navigator, now you can move between the grid 