@@ -47,6 +47,7 @@
     - turn gameobject
     - move up/down/left/right gameobject
     - * these are input fields
+    - delete
     - more
     
     - fixed the log view (also added the ability to scroll with the mouse middle button)
